Changes
=======

3.6.4 (unreleased)
------------------

- Use the standard Python doctest module instead of zope.testing.doctest

3.6.3 (2011-12-03)
------------------

- KeywordIndex: Minor optimization; use __nonzero__ instead of __len__
  to avoid loading the full TreeSet.

3.6.2 (2011-12-03)
------------------

- KeywordIndex: Store docids in TreeSet rather than a Set when the
  number of documents matching a word reaches a configurable
  threshold (default 64). The rule is applied to individual words at
  indexing time, but you can call the new optimize method to optimize
  all the words in an index at once. Designed to fix LP #881950.

3.6.1 (2010-07-08)
------------------

- TextIndex:  reuse the lexicon from the underlying Okapi / Cosine
  index, if passed.  (LP #232516)

- Lexicon:  avoid raising an exception when indexing None. (LP #598776)

3.6.0 (2009-08-03)
------------------

- Improved test readability and reached 100% test coverage.

- Fixed a broken optimization in okascore.c: it was passing a Python
  float to the PyInt_AS_LONG() macro. This resulted in wrong scores,
  especially on 64 bit platforms, where all scores typically ended up
  being zero.

- Changed okascore.c to produce the same results as its Python
  equivalent, reducing the brittleness of the text index tests.

3.5.2 (2009-06-09)
------------------

- Port okascore.c optimization used in okapiiindex from Zope2 catalog
  implementation.  This module is compiled conditionally, based on
  whether your environment has a working C compiler.

- Don't use ``len(self._docweight)`` in okapiindex _search_wids method
  (obtaining the length of a BTree is very expensive at scale).
  Instead use self.documentCount().  Also a Zope2 port.

3.5.1 (2009-02-27)
------------------

- The baseindex, okapiindex, and lexicon used plain counters for various
  lengths, which is unsuitable for production applications.
  Backport code from Zope2 indexes which opportunistically replaces the