@@ -4,6 +4,8 @@ Changes
 3.6.4 (unreleased)
 ------------------
 
+- Insure proper unindex behavior if index_doc is called with a empty sequence.
+
 - Use the standard Python doctest module instead of zope.testing.doctest
 
 3.6.3 (2011-12-03)
